[gd_scene load_steps=2 format=2]

[ext_resource path="res://Effects/scanner_effect.gd" type="Script" id=1]

[node name="ScannerEffect" type="Node2D"]
script = ExtResource( 1 )
debugON = true

[node name="Tween" type="Tween" parent="."]

[node name="CL" type="CanvasLayer" parent="."]

[node name="p1" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="ScanTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="M" type="Node2D" parent="."]

[node name="M1" type="Node2D" parent="M"]
position = Vector2( 0, 100 )

[node name="M2" type="Node2D" parent="M"]
position = Vector2( 0, -100 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ScanTimer" to="." method="_on_ScanTimer_timeout"]
